# This file is part of intel-tsx-rtm. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-tsx-rtm/master/COPYRIGHT. No part of intel-tsx-rtm, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of intel-tsx-rtm. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-tsx-rtm/master/COPYRIGHT.


[package]
name = "intel-tsx-rtm"
description = "Provides wrappers for Rust to use Intel's TSX RTM, a hardware transactional memory extension for some Skylake CPUs."
keywords = ["tsx", "rtm", "transactional memory"]
categories = ["hardware-support", "concurrency"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/intel-tsx-rtm/blob/master/README.md"
homepage = "https://github.com/lemonrock/intel-tsx-rtm"
repository = "https://github.com/lemonrock/intel-tsx-rtm.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*"]
build = "src/build.rs"
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[build-dependencies]
rust_c = { version = "0.1.1", features = ["build"] }

[dependencies]
bitflags = "^1.0"
rust_c = { version = "0.1.1", features = ["macro"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "^3.0"
